[package]
name = "accounter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Axum web framework
axum = "0.7.9"

# Tokio
tokio = { version = "1.32.0", features = ["full"] }

# SeaOrm
sea-orm = { version = "1.1.2", features = ["sqlx-mysql", "runtime-actix-native-tls"] }

# serde
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.133"